syntax = "proto3";

option go_package = "grpc-simple/proto";

package proto;

//import "google/protobuf/timestamp.proto";
//import "gogoproto/gogo.proto";
//import "google/api/annotations.proto";
//import "google/protobuf/empty.proto";

service Product {
  rpc GetBy(GetByRequest) returns (GetByResponse) {};

  rpc GetAllById(GetByRequest) returns (GetAllByIdResponse) {};
  rpc GetAllByIdDesc(GetByRequest) returns (GetAllByIdResponse) {};

  rpc GetAllByName(GetByRequest) returns (GetAllByIdResponse) {};
  rpc GetAllByNameDesc(GetByRequest) returns (GetAllByIdResponse) {};

  rpc GetAllByCreated(GetByRequest) returns (GetAllByIdResponse) {};
  rpc GetAllByCreatedDesc(GetByRequest) returns (GetAllByIdResponse) {};
}

message GetByRequest {
  string id = 1;
  string name = 2;
//  google.protobuf.Timestamp created_at = 3;
  int64 created_at = 3;
  string price = 4;
  string description = 5;
}

message GetByResponse {
  string id = 1;
  string name = 2;
//  google.protobuf.Timestamp created_at = 3;
  int64 created_at = 3;
  string price = 4;
  string description = 5;
}

message GetAllByIdResponse {
  repeated GetByResponse result = 1;
}
